# llm_promt_gym

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  build.sh  index.html  run.ps1  run.sh  serve.py
assets/: app.js  styles.css
src/: api.rs  bindings.rs  chat.rs  lib.rs  types.rs  ui.rs
