[package]
name = "rust_llm_chat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "0.4"
gloo-net = "0.4"
gloo-utils = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlButtonElement",
  "Window",
  "Response",
  "RequestInit",
  "RequestMode",
  "Headers",
  "AbortController",
  "ReadableStream",
  "HtmlCollection",
  "NodeList",
  "DomTokenList",
  "Node",
] 